--- a/skyfolk/templates/account/cf-interests.html
+++ b/skyfolk/templates/account/cf-interests.html
@@ -24,7 +24,7 @@
 {% block cf-form %}
     <div class="col s12 title center">
         <h3 class="grey-text darken-1 center-align">Elige tus intereses</h3>
-        <h5>Añade aquellos intereses que deseas seguir o bien añade aquellos que deseas eliminar</h5>
+        <h5>Añade aquellos intereses que deseas seguir.</h5>
     </div>
     <div class="row"></div>
     <div class="col s12">
