--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -24,7 +24,7 @@ Template para la configuracion del perfil de usuario
                 style="background: url('{{ user_profile.back_image.url }}') no-repeat center center; background-size: cover;">
                 {% else %}
                 <div class="col l12 m12 s12 profilex"
-                    style="background: url('{% static "dist/img/nuevo_back.png" %}') no-repeat center center; background-size: cover;">
+                    style="background: url('{% static "dist/img/nuevo_back.jpg" %}') no-repeat center center; background-size: cover;">
                     {% endif %}
                     <!-- Si el usuario tiene imagen, lo redireccionamos a change -->
                     <div id="avatar-profile" title="Imágen de perfil" class="img-profile"
