--- a/skyfolk/templates/account/password_reset.html
+++ b/skyfolk/templates/account/password_reset.html
@@ -33,8 +33,7 @@
         <br><br>
         <div class="divider"></div>
         <div class="row">
-            <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your
-                password.{% endblocktrans %}</p>
+            <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
             <img class="need-help" src="{% static "img/help.svg" %}"
                  onclick="location.href='{% url 'support:support-password' %}'" title="Necesito ayuda"
                  alt="Necesito ayuda"/>
