--- a/skyfolk/templates/account/relations_page.html
+++ b/skyfolk/templates/account/relations_page.html
@@ -11,7 +11,7 @@
                         {% if item.to_profile.back_image %}
                             <img class="back-profile-user lazyload" data-src="{{ item.to_profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user lazyload" data-src="{% static "img/nuevo_back.png" %}">
+                            <img class="back-profile-user lazyload" data-src="{% static "img/nuevo_back.jpg" %}">
                         {% endif %}
                         <i class="material-icons like-him">person</i>
                         <div class="bg-user">
@@ -42,7 +42,7 @@
                         {% if item.from_profile.back_image %}
                             <img class="back-profile-user lazyload" data-src="{{ item.from_profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user lazyload" data-src="{% static "img/nuevo_back.png" %}">
+                            <img class="back-profile-user lazyload" data-src="{% static "img/nuevo_back.jpg" %}">
                         {% endif %}
                         <i class="material-icons like-him">person</i>
                         <div class="bg-user">
