--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -71,7 +71,7 @@
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.publication_group_multimedia_photo_extra_content.image %}{{ node.publication_group_multimedia_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                        {% if node.publication_group_multimedia_photo_extra_content.image %}{{ node.publication_group_multimedia_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                 <span class="card-title white-text">{{ node.publication_group_multimedia_photo_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
