--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -75,7 +75,7 @@
                                         <img class="lazyload" data-src="
 
 
-                                                {% if pub.theme_extra_content.image %}{{ pub.theme_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                {% if pub.theme_extra_content.image %}{{ pub.theme_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                         <span class="card-title white-text">{{ pub.theme_extra_content.title }}</span>
                                     </div>
                                     <div class="card-content">
