--- a/skyfolk/templates/groups/followers_page.html
+++ b/skyfolk/templates/groups/followers_page.html
@@ -11,7 +11,7 @@
                         {% if item.profile.back_image %}
                             <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                         {% endif %}
                         <i class="material-icons like-him">person</i>
                         <div class="bg-user">
@@ -47,7 +47,7 @@
                         {% if item.profile.back_image %}
                             <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                         {% endif %}
                         <i class="material-icons like-him">person</i>
                         <div class="bg-user">
