--- a/skyfolk/templates/groups/item_group.html
+++ b/skyfolk/templates/groups/item_group.html
@@ -8,7 +8,7 @@
                     <img class="back-profile-user"
                     src="{{ group.back_image.url }}">
                     {% else %}
-                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                    <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                     {% endif %}
                     <i class="material-icons md-24 group-icon"
                         title="{{ group.users.all|length }}">group</i>
