--- a/skyfolk/templates/groups/user_list_page.html
+++ b/skyfolk/templates/groups/user_list_page.html
@@ -12,7 +12,7 @@
                             <img class="back-profile-user"
                                  src="{{ item.from_like.profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                         {% endif %}
                         <i class="material-icons like-him">favorite</i>
                         <div class="bg-user">
