--- a/skyfolk/templates/account/like_entries.html
+++ b/skyfolk/templates/account/like_entries.html
@@ -10,7 +10,7 @@
                         {% if item.from_profile.back_image %}
                             <img class="back-profile-user" src="{{ item.from_profile.back_image.url }}">
                         {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                         {% endif %}
                         <i class="material-icons like-him">favorite</i>
                         <div class="bg-user">
