--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -11,7 +11,7 @@
             {% if request.user.profile.back_image %}
                 <img class="background" src="{{ request.user.profile.back_image.url }}">
             {% else %}
-                <img class="background" src="{% static "dist/img/nuevo_back.png" %}">
+                <img class="background" src="{% static "dist/img/nuevo_back.jpg" %}">
             {% endif %}
             <a href="/profile/{{ request.user }}">{% avatar user %}</a>
             <a href="/profile/{{ request.user }}"><span class="white-text name">{{ request.user.username }}</span></a>
