--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -78,7 +78,7 @@
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
                                                 <div class="card small">
                                                     <div class="card-image">
-                                                        <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                        <img class="lazyload" data-src="{% if node.extra_content.image %}{{ node.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                         <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                                     </div>
                                                     <div class="card-content">
