--- a/skyfolk/templates/account/shared_publication.html
+++ b/skyfolk/templates/account/shared_publication.html
@@ -79,7 +79,7 @@
         <div class="card small">
             <div class="card-image">
                 <img class="lazyload" data-src="
-                {% if shared_publication.extra_content.image %}{{ shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                {% if shared_publication.extra_content.image %}{{ shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                 <span class="card-title white-text">{{ shared_publication.extra_content.title }}</span>
             </div>
             <div class="card-content">
