--- a/skyfolk/templates/channels/new_feed_publication.html
+++ b/skyfolk/templates/channels/new_feed_publication.html
@@ -75,7 +75,7 @@
                                     <div class="card small">
                                         <div class="card-image">
                                             <img class="lazyload" data-src="
-                                                    {% if item.shared_publication.extra_content.image %}{{ item.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                    {% if item.shared_publication.extra_content.image %}{{ item.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                             <span class="card-title white-text">{{ item.shared_publication.extra_content.title }}</span>
                                         </div>
                                         <div class="card-content">
@@ -135,7 +135,7 @@
                     <div class="card small">
                         <div class="card-image">
                             <img class="lazyload" data-src="
-                                    {% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                    {% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                             <span class="card-title white-text">{{ item.extra_content.title }}</span>
                         </div>
                         <div class="card-content">
