--- a/skyfolk/templates/channels/new_photo_publication.html
+++ b/skyfolk/templates/channels/new_photo_publication.html
@@ -71,7 +71,7 @@
                         {% comment %} Para publicaciones con URL {% endcomment %}
                         <div class="card small">
                             <div class="card-image">
-                                <img class="lazyload" data-src="{% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                <img class="lazyload" data-src="{% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                 <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
                             </div>
                             <div class="card-content">
