--- a/skyfolk/templates/groups/board_theme.html
+++ b/skyfolk/templates/groups/board_theme.html
@@ -15,7 +15,7 @@
                 <div class="card-image">
                     <img class="lazyload" data-src="
 
-                            {% if object.image %}{{ object.image.url }}{% else %}{% static "img/nuevo_back.png" %}{% endif %}"
+                            {% if object.image %}{{ object.image.url }}{% else %}{% static "img/nuevo_back.jpg" %}{% endif %}"
                          style="width: 120px; height: 120px;">
                 </div>
                 <div class="card-stacked">
