--- a/skyfolk/templates/groups/group_themes.html
+++ b/skyfolk/templates/groups/group_themes.html
@@ -6,7 +6,7 @@
         <div class="card horizontal">
             <div class="card-image">
                 <img class="lazyload" data-src="
-                        {% if theme.image %}{{ theme.image.url }}{% else %}{% static "img/nuevo_back.png" %}{% endif %}"
+                        {% if theme.image %}{{ theme.image.url }}{% else %}{% static "img/nuevo_back.jpg" %}{% endif %}"
                      style="width: 120px; height: 120px;">
             </div>
             <div class="card-stacked">
