--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -100,7 +100,7 @@ Template para las busquedas
                                     {% if item.object.back_image %}
                                         <img class="back-profile-user" src="{{ item.object.back_image.url }}">
                                     {% else %}
-                                        <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                                        <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                                     {% endif %}
                                     <i class="material-icons like-him">person</i>
                                     <div class="bg-user">
@@ -123,7 +123,7 @@ Template para las busquedas
                                     {% if item.object.back_image %}
                                         <img class="back-profile-user" src="{{ item.object.back_image.url }}">
                                     {% else %}
-                                        <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                                        <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                                     {% endif %}
                                     <i class="material-icons like-him">group</i>
                                     <div class="bg-user">
@@ -191,7 +191,7 @@ Template para las busquedas
                                                 <div class="card small">
                                                     <div class="card-image">
                                                         <img class="lazyload" data-src="
-                                                                {% if item.object.extra_content.image %}{{ item.object.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                                {% if item.object.extra_content.image %}{{ item.object.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                         <span class="card-title white-text">{{ item.object.extra_content.title }}</span>
                                                     </div>
                                                     <div class="card-content">
@@ -288,7 +288,7 @@ Template para las busquedas
                                 {% if item.object.back_image %}
                                     <img class="back-profile-user" src="{{ item.object.back_image.url }}">
                                 {% else %}
-                                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                                    <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                                 {% endif %}
                                 <i class="material-icons like-him">person</i>
                                 <div class="bg-user">
@@ -316,7 +316,7 @@ Template para las busquedas
                                 {% if item.object.back_image %}
                                     <img class="back-profile-user" src="{{ item.object.back_image.url }}">
                                 {% else %}
-                                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                                    <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                                 {% endif %}
                                 <i class="material-icons like-him">group</i>
                                 <div class="bg-user">
@@ -414,7 +414,7 @@ Template para las busquedas
                                                                 <div class="card small">
                                                                     <div class="card-image">
                                                                         <img class="lazyload" data-src="
-                                                                                {% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                                                {% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                                         <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
                                                                     </div>
                                                                     <div class="card-content">
@@ -495,7 +495,7 @@ Template para las busquedas
                                                                 <div class="card small">
                                                                     <div class="card-image">
                                                                         <img class="lazyload" data-src="
-                                                                                {% if item.object.shared_group_publication.extra_content.image %}{{ item.object.shared_group_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                                                {% if item.object.shared_group_publication.extra_content.image %}{{ item.object.shared_group_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                                         <span class="card-title white-text">{{ item.object.shared_group_publication.extra_content.title }}</span>
                                                                     </div>
                                                                     <div class="card-content">
@@ -545,7 +545,7 @@ Template para las busquedas
                                                 <div class="card small">
                                                     <div class="card-image">
                                                         <img class="lazyload" data-src="
-                                                                {% if item.object.extra_content.image %}{{ item.object.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                                {% if item.object.extra_content.image %}{{ item.object.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                         <span class="card-title white-text">{{ item.object.extra_content.title }}</span>
                                                     </div>
                                                     <div class="card-content">
