--- a/user_profile/templates/user_profile/user_content.html
+++ b/user_profile/templates/user_profile/user_content.html
@@ -103,7 +103,7 @@
                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                             <div class="card small">
                                                 <div class="card-image">
-                                                    <img class="lazyload" data-src="{% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                    <img class="lazyload" data-src="{% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                     <span class="card-title white-text">{{ item.extra_content.title }}</span>
                                                 </div>
                                                 <div class="card-content">
@@ -126,7 +126,7 @@
                                 {% if item.to_profile.back_image %}
                                     <img class="back-profile-user" src="{{ item.to_profile.back_image.url }}">
                                 {% else %}
-                                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                                    <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                                 {% endif %}
                                 <i class="material-icons like-him">person</i>
                                 <div class="bg-user">
@@ -149,7 +149,7 @@
                                 {% if item.to_like.back_image %}
                                     <img class="back-profile-user" src="{{ item.to_like.back_image.url }}">
                                 {% else %}
-                                    <img class="back-profile-user" src="{% static "img/nuevo_back.png" %}">
+                                    <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                                 {% endif %}
                                 <i class="material-icons like-him">group</i>
                                 <div class="bg-user">
