--- a/dash/templates/dash/create_dashboard_workspace_ajax.html
+++ b/dash/templates/dash/create_dashboard_workspace_ajax.html
@@ -5,7 +5,7 @@
         <h4 class="center">{% trans "Add dashboard workspace" %}</h4>
     </div>
     <div class="row content-body">
-        <form method="post" action="{% url 'dash.create_dashboard_workspace' %}" enctype="multipart/form-data" class="form-horizontal">
+        <form method="post" action="{% url 'dash:dash.create_dashboard_workspace' %}" enctype="multipart/form-data" class="form-horizontal">
             {% csrf_token %}
             {{ form.non_field_errors }}
             <ul class="content-listing generic-form">
