--- a/dash/templates/dash/dashboard_workspaces_ajax.html
+++ b/dash/templates/dash/dashboard_workspaces_ajax.html
@@ -6,7 +6,7 @@
                 <div class="col l4 m6 s12">
                     <div class="card z-depth-2">
                         <div class="row">
-                            <a href="{% if edit_mode %}{% url 'dash.edit_dashboard' ws.slug %}{% else %}{% url 'dash.dashboard' ws.slug %}{% endif %}"
+                            <a href="{% if edit_mode %}{% url 'dash:dash.edit_dashboard' ws.slug %}{% else %}{% url 'dash:dash.dashboard' ws.slug %}{% endif %}"
                                title="{{ ws.name }}">
                                 <span class="material-icons" title="Privado">{% if not ws.is_public %}
                                     lock{% endif %}</span>
