--- a/dash/templates/dash/edit_dashboard_settings_ajax.html
+++ b/dash/templates/dash/edit_dashboard_settings_ajax.html
@@ -5,7 +5,7 @@
         <h2 class="content-title">{% trans "Edit dashboard settings" %}</h2>
     </div>
     <div class="content-body">
-        <form method="post" action="{% url 'dash.edit_dashboard_settings' %}" enctype="multipart/form-data" class="form-horizontal">
+        <form method="post" action="{% url 'dash:dash.edit_dashboard_settings' %}" enctype="multipart/form-data" class="form-horizontal">
             {% csrf_token %}
             <ul class="content-listing generic-form">
                 {% include layout.form_snippet_template_name %}
