--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -52,6 +52,10 @@ table
   border-collapse: collapse
   border-spacing: 0
 
+.emoji
+  width: 20px !important
+  height: 20px !important
+
 .material-icons
   display: inline-flex
   align-items: center
